<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hevesi Toolbox</string>
    <string name="action_settings">Beállítások</string>
    <string name="hello_world">Hello world!</string>
    <string name="banner_ad_unit_id">ca-app-pub-4956466865971466/8315826234</string>


    //Képernyök
    <string name="title_activity_settings">Beállítások</string>
    <string name="title_activity_iranyszog">Irányszög számítás</string>
    <string name="title_activity_polarispont">Poláris pont számítás</string>
    <string name="title_activity_numerikuster">Numerikus területszámítás</string>
    <string name="title_activity_numerikusterulet">Numerikus területszámítás</string>
    <string name="title_activity_komparalas">Komparálás</string>
    <string name="title_activity_haromszog">"Háromszög "</string>
    <string name="title_activity_haromszograjz">haromszograjz</string>
    <string name="title_activity_numerikusteruletrajz">numerikusteruletrajz</string>
    <string name="title_activity_atvalto">Átváltó</string>
    <string name="title_activity_szelveny">Szelvény kereső</string>
    <string name="title_activity_metszesek">Metszések</string>
    <string name="title_activity_tajekozott">Előmetszés tájékozott irányértékkel</string>
    <string name="title_activity_belsoszoges">Belsőszöges előmetszés</string>
    <string name="title_activity_iv">Ív metszés</string>
    <string name="title_activity_hatra">Hátra metszés</string>
    <string name="title_activity_oldal">Oldal metszés</string>
    <string name="title_activity_wgseov">WGS-EOV átváltó</string>

    //Irányszög
    <string name="iranyszog_kezdopont.y">Kezdőpont Y</string>
    <string name="iranyszog_kezdopont.x">Kezdőpont X</string>
    <string name="iranyszog_vegpont.y">Végpont Y</string>
    <string name="iranyszog_vegpont.x">Végpont X</string>
    <string name="iranyszog_szamol">Számol</string>
    <string name="iranyszog_szog">Szög :</string>
    <string name="iranyszog_tavolsag">Távolság :</string>
    <string name="iranyszog_ures">Valamelyik mező üres!</string>
    <string name="iranyszog_egyezik">A két koordináta egyezik !</string>
    <string name="iranyszog_sugo">Meghatározza két pont távolságát, és a köztük lévő irányszöget.</string>

    //Poláris
    <string name="polaris_kezdopont_y">Kezdőpont Y</string>
    <string name="polaris_kezdopont_x">Kezdőpont X</string>
    <string name="porlarisz_szog">Szög</string>
    <string name="polaris_tav">Távolság</string>
    <string name="polaris_szamol">Számol</string>
    <string name="polaris_pont_y">Pont Y :</string>
    <string name="polaris_pont_x">Pont X :</string>
    <string name="polaris_ures">Valamelyik mező üres!</string>
    <string name="polaris_sugo">Meghatározza annak a pontnak a helyzetét, amelyik egy ismert ponthoz képest, megadott távolságra helyezkedik el egy ismert irányszögű egyenesen.</string>

    //Numerikus
    <string name="numerikus_y">Y</string>
    <string name="numerikus_x">X</string>
    <string name="hozzaadas">Hozzáadás</string>
    <string name="numerikus_szamol">Számít</string>
    <string name="numerikus_ures">Valamelyik mező üres!</string>
    <string name="numerikus_keves">Túl kevés bevitt adat!</string>
    <string name="numerikus_terulet">Terület : </string>
    <string name="numerikus_sugo">Meghatározza a poligon területét sarokpontjainak koordinátái alapján. </string>

    //Háromszög
    <string name="haromszog_a">a oldal</string>
    <string name="haromszog_b">b oldal</string>
    <string name="haromszog_c">c oldal</string>
    <string name="haromszog_alfa">α szög</string>
    <string name="haromszog_beta">β szög</string>
    <string name="haromszog_gamma">γ szög</string>
    <string name="haromszog_szamol">Számol</string>
    <string name="haromszog_egyenlotlen">A Háromszög-egyenlőtlenség nem teljesül!</string>
    <string name="haromszog_terulet">Terület : </string>
    <string name="haromszog_kevesadat">Túl kevés adat !</string>
    <string name="haromszog_nincskesz">Először  add meg a háromszög adatait!</string>
    <string name="haromszog_sugo">Meghatározza a háromszög maradék adatait!
          \n Lehetséges megadási módok:
          \n  -Három oldal
          \n  -Két oldala és a közbezárt szöge
          \n  -Egy oldala és a rajta fekvő két szöge
          \n  -Két oldala és a hosszabb oldallal szemközti szöge
        </string>

    //Átváltó
    <string name="atvalto_meret">Méret</string>
    <string name="atvalto_merata">Méretarány</string>
    <string name="atvalto_tav">Távolság</string>
    <string name="atvalto_ter">Terület</string>
    <string name="atvalto_szog">Szög</string>
    <string name="atvalto_meretarany">Méretarány</string>
    <string name="atvalto_szamol">Számol</string>
    <string name="atvalto_innen">Innen</string>
    <string name="atvalto_ide">Ide</string>
    <string name="atvalto_terepi">Terepi</string>
    <string name="atvalto_terkepi">Térképi</string>
    <string name="atvalto_ures">Nem adtál meg mértékegységet!</string>
    <string name="atvalto_keves">Túl kevés adat!</string>

    //Szelvény
    <string-array name="meretarany_array">
        <item>1:500</item>
        <item>1:1000</item>
        <item>1:2000</item>
        <item>1:4000</item>
        <item>1:10000</item>
        <item>1:25000</item>
        <item>1:50000</item>
        <item>1:100000</item>
    </string-array>
    <string name="szelveny_ervenytelen">Érvénytelen koordináta!</string>
    <string name="szelveny_ures">Valamelyik mező üres !</string>
    <string name="szelveny_nemletezo">Nem létező szelvény!</string>
    <string name="szelveny_sugo">EOV koordináta alapján, az azt tartalmazó EOTR szelvény keresése.
        \n EOTR szelvény szomszédjainak keresése.
    </string>
    <string name="szelveny_kereses">Keres</string>

    //WGS-EOV
    <string name="wgs_sugo"> WGS84 és EOV vetületi rendszer közti koordináta oda-vissza transzformáció.
        \n Használata internetkapcsolatot igényel!
        \n Csak közelítõ pontosságú eredményt ad!</string>


    //Metszés
    <string name="iv_sugo">Új pont koordinátáinak a számítása két ismert koordinátájú pont, valamint az ismert pontok és az új pont közötti vízszintes távolság felhasználásával.
           \n Körüljárási mód: a meghatározandó pont az A-B szakasz ball oldalán. PBA </string>
    <string name="oldal_sugo">Új pont koordinátáinak a számítása két ismert koordinátájú pont, valamint az ismert pontok és az új pont közötti vizszintes távolság felhasználásával. </string>
    <string name="belso_sugo">Új pont koordinátáinak meghatározása két ismert koordinátájú pont, valamint az ismert pontról az új pontra menő irányok tájékozott irányértékeinek a felhasználásával.
            \n Körüljárási mód: a meghatározandó pont az A-B szakasz ball oldalán. PBA </string>
    <string name="tajekozott_sugo">Meghatározza a poligon területét sarokpontjainak koordinátái alapján.
                                   \n Visszazáráskor számol! </string>
    <string name="hatra_sugo">Meghatározza a poligon területét sarokpontjainak koordinátái alapján.
                                   \n Visszazáráskor számol! </string>

    //Merü
    <string name="menu_vissza">Visszaállítás</string>
    <string name="menu_sugo">Súgó</string>
    <string name="munu_rajz">Rajzolás</string>

    //Fömenü
    <string name="mainmenu_iranyszog">Irányszög számítás</string>
    <string name="mainmenu_polarispont">Poláris pont számítás</string>
    <string name="mainmenu_numerikus">Numerikus területszámítás</string>
    <string name="mainmenu_haromszog">Háromszög</string>
    <string name="mainmenu_atvalto">Átváltó</string>
    <string name="mainmenu_szelveny">Szelvény kereső</string>
    <string name="mainmenu_metszes">Metszések</string>
    <string name="wgseov">WGS - EOV</string>
    <string name="main_sugo">Az alkalmazás a geodéziaia számítások megkönnyítésére szolgál.
        \n Készítette: Fülöp Martin
        \n Ötletek,hibák : fulopdvd@gmail.com</string>

</resources>
