<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hu.valamas.hevesitoolbox.szamolasok.atvalto">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scroll"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:fillViewport="false"
        android:layout_above="@+id/adView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/sor1">

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:id="@+id/radiocsoport1"
                    android:gravity="center">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atvalto_meret"
                        android:id="@+id/radio_meret"
                        android:checked="false"
                        android:layout_marginRight="10dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atvalto_merata"
                        android:id="@+id/radio_mereta"
                        android:checked="false" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/sor2">

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:gravity="center">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atvalto_tav"
                        android:id="@+id/radio_tav"
                        android:checked="false"
                        android:visibility="invisible" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atvalto_ter"
                        android:id="@+id/radio_ter"
                        android:checked="false"
                        android:visibility="invisible" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atvalto_szog"
                        android:id="@+id/radio_szog"
                        android:checked="false"
                        android:visibility="invisible" />
                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/sor3"
                android:visibility="invisible">

                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/from_in"
                    android:text="1"
                    android:inputType="number|numberSigned|numberDecimal" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/from"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/sor4"
                android:visibility="invisible">

                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/to_in"
                    android:focusable="true"
                    android:inputType="number|numberSigned|numberDecimal" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/to"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/sor5"
                android:visibility="invisible">

                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/mereta_in"
                    android:inputType="number|numberDecimal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atvalto_meretarany"
                    android:id="@+id/mereta" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/sor6"
                android:visibility="invisible">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atvalto_szamol"
                    android:id="@+id/szamol"
                    android:layout_weight="2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
