<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hu.valamas.hevesitoolbox.szamolasok.polarispont">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/polaris_kezdopont_y"
                    android:id="@+id/KY"
                    android:layout_column="0"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/KY_in"
                    android:layout_column="1"
                    android:inputType="numberDecimal"
                    android:layout_weight="1" />
            </TableRow>



                <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polaris_kezdopont_x"
                android:id="@+id/KX"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/KX_in"
                android:layout_column="1"
                android:inputType="numberDecimal"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/porlarisz_szog"
                    android:id="@+id/szog"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/szog_in"
                    android:layout_column="1"
                    android:inputType="numberDecimal"
                    android:numeric="integer|decimal"
                    android:autoText="false"
                    android:layout_weight="1"
                    android:layout_span="2"
                    android:digits="1234567890-."
                    android:editable="true" />

        </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/polaris_tav"
                    android:id="@+id/tav"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tav_in"
                    android:layout_column="1"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/polaris_szamol"
                    android:id="@+id/button"
                    android:layout_column="0"
                    android:layout_span="7" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/polaris_pont_y"
                    android:id="@+id/PY_text"
                    android:layout_column="0"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/PY_eredmeny"
                    android:textSize="20sp"
                    android:layout_column="1"
                    android:visibility="invisible" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/polaris_pont_x"
                    android:id="@+id/PX_text"
                    android:layout_column="0"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/PX_eredmeny"
                    android:textSize="20sp"
                    android:layout_column="1"
                    android:visibility="invisible" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>
